<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Empty"></string>
    <string name="Add">Send Request</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="cancel">Cancel</string>
    <string name="messages">Your Messages</string>
    <string name="Send">Send</string>
    <string name="password_again">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Done</string>
    <string name="menuItem_SignUp">Sign Up</string>
    <string name="menuItem_Exit">Log Out</string>
    <string name="fill_both_username_and_password">Username or Password is Not Filled</string>
    <string name="make_sure_username_and_password_correct">Invalid Username or Password</string>
	<string name="hello">ICon</string>
    <string name="friend_list">Friend List</string>
    <string name="username">Username</string>
    <string name="messaging">Messaging</string>
    <string name="local_service_started">App Service Started</string>
    <string name="local_service_stopped">App Service Stopped</string>
	<string name="local_service_connected">Local Service Connected</string>
	<string name="OK">Ok</string>
	<string name="not_connected_to_service">Not Connected to the Service and this is not supposed to happened so please inform this situation to madhusudan1997.sharma@gmail.com</string>
	<string name="user_offline">This User is Offline</string>
	<string name="signup_fill_all_fields">Please fill all Fields</string>
	<string name="signup_type_same_password_in_password_fields">Type same Password in Password Fields</string>
	<string name="signup_failed">Sign Up failed because of Unknown Reason, please Try Again later</string>
	<string name="signup_username_crashed">Your Username have been already taken, please try another Username</string>
	<string name="signup_successfull">Your Registration is Completed Successfully</string>
	<string name="username_and_password_length_short">Username and Password length must be at least 5</string>
	<string name="add_new_friend">Find Friends</string>
	<string name="no_friend">You have no Friend, you can add new Friends from Menu</string>
	<string name="request_sent">Your Request has been Sent</string>
	<string name="new_friend_request_exist">New Friend Request</string>
	<string name="approve_selected_friends">Approve Selected</string>
	<string name="not_connected_to_network">There is no available Connected Network</string>
	<string name="message_cannot_be_sent">Message was not been able to Send</string>
	<string name="exit_application">Exit</string>
	<string name="friendNumber">Friend\'s Phone Number</string>
	<string name="request_accepted">Request(s) Accepted</string>
	<string name="friendRequestList">Pending Friend Request(s)</string>
	<string name="name">Full Name</string>
	<string name="noFriend">You have no Friend</string>
</resources>
