<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="#0000A0"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_style"
        android:clickable="true"
        android:ems="10"
        android:hint="Enter Phone Number"
        android:inputType="number"
        android:padding="7dip"
        android:password="false"
        android:singleLine="true"
        android:text="@string/Empty"
        android:textColor="#0000A0" >

        <requestFocus />

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#0000A0"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/edit_text_style"
        android:clickable="true"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="7dip"
        android:password="true"
        android:singleLine="true"
        android:text="@string/Empty"
        android:textColor="#0000A0" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dip"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="exit"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="57dip"
        android:visibility="invisible" />

</LinearLayout>